welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:14: error: type mismatch;
 found   : Unit
 required: Boolean
        if(line=0){
               ^